--- a/client/clienthtmlpages/signDiv.html
+++ b/client/clienthtmlpages/signDiv.html
@@ -1,10 +1,10 @@
-<html>
+
     <title>Sign In</title>
     <head>
         <link rel="stylesheet" href="./signDiv.css">
     </head>
     <body align = 'center'>
-        <div id="signDiv">
+        <div >
                 Username:<input id="signDiv-username" type="text"></input><br>
                 Password: <input id="signDiv-password" type="password"></input><br>
                 <br>
@@ -12,4 +12,3 @@
                 <button id="signDiv-signUp">Sign Up</button>
         </div>
     </body>
-</html>
