--- a/client/index.html
+++ b/client/index.html
@@ -110,42 +110,44 @@
 
             }
             #container { /* source : https://stackoverflow.com/questions/47918195/creating-a-basic-html-javascript-leaderboard */
-  width: 600px;
-  height: auto;
-}
+                width: 600px;
+                height: auto;
+                }
 
-.row {
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 40px;
-  border-bottom: 1px solid #AFAFAF;
-}
+                .row {
+                position: relative;
+                display: block;
+                width: 100%;
+                height: 50px;
+                border-bottom: 1px solid #AFAFAF;
+                }
 
-.name {
-  position: relative;
-  display: inline-block;
-  width: 75%;
-  line-height: 45px;
-}
+                .name {
+                position: relative;
+                display: inline-block;
+                width: 75%;
+                line-height: 40px;
+                font-size: 20px;
+                }
 
-.score {
-  position: relative;
-  display: inline-block;
-  width: 25%;
-}
+                .score {
+                position: relative;
+                display: inline-block;
+                width: 25%;
+                font-size: 20px;
+                }
 
-.row:nth-child(1) {
-  background: gold;
-}
+                .row:nth-child(1) {
+                background: gold;
+                }
 
-.row:nth-child(2) {
-  background: #c0c0c0;
-}
+                .row:nth-child(2) {
+                background: #c0c0c0;
+                }
 
-.row:nth-child(3) {
-  background: #cd7f32;
-}
+                .row:nth-child(3) {
+                background: #cd7f32;
+                }
 
 
     </style>
